# Towards_Data_Science

./: .gitignore  LICENSE  README.md  Segmentation.ipynb  hr_occupation.session.sql  hr_stations.session.sql  requirements.txt  sql_zoo_conn.session.sql  uni_midterm.ipynb  y.npy
DataEngineering/BigData_Uni_course/: lecture_notes.ipynb
Machine_Learning/Anomaly_Detection/: algorithm.ipynb
Machine_Learning/Applied_machine_learning_course/: notes.ipynb
Machine_Learning/CNN/: CNN_1.ipynb  CNN_2.ipynb  CNN_3_Detection_Algos.ipynb
Machine_Learning/Deep_Learning_MIT_Book/: notes_1.ipynb
Machine_Learning/GANs/: gans_1.ipynb
Machine_Learning/K-means/: summary.ipynb
Machine_Learning/Linear_Regression/: algorithm.ipynb  algorithm.md
Machine_Learning/NLP/: NLP_notes.ipynb
Machine_Learning/Neural_Networks/: DL_project_structure.ipynb  Neural_network_from_scratch.py  Neural_network_hyperparamters.ipynb  Neural_network_new.ipynb
Machine_Learning/Papers/: ImageNet.ipynb
Machine_Learning/Practical_Tips/: DATA_SCIENCE_PROBLEMS_SOL.ipynb  PT_1.ipynb  (+1 more)
Models_From_Scratch/: README.md
NLP/: DL_models.ipynb  NLP_notes.ipynb
Programming_Tools/: Untitled-1.ipynb
RL/: RL_Lab_1.ipynb  RL_Lab_2.ipynb  RL_Lab_3.ipynb  RL_Lab_4.ipynb  RL_Lab_6.ipynb
SQL/: create_parks_and_rec_db.sql  use_cpr_db.sql
da_toolkit/: pyproject.toml  setup.cfg
da_toolkit/datakit.egg-info/: PKG-INFO
da_toolkit/datakit/feature_engineering/: combination.py  discretize.py
da_toolkit/datakit/preprocessing/: feature_engineering.py  impute.py
da_toolkit/datakit/visualize/: visualize.py
(+436 files in other folders)
