[project]
name = "da_toolkit"
version = "0.1"
authors = [
    {name="ayhembouabid", email="bouabidayhem@gmail.com"}
]
maintainers = [
  { name="Mikhail Trunov", email="m.trunov@innopolis.ru" },
]
readme = "ReadMe.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
include = [
  "src/*",
]
exclude = []
[tool.hatch.build.targets.wheel]
packages = ["src"]
